Updated info page
minor text edit

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: PatSite
-description: Showcase Pat 
+title: Patricia Sylvester 
+description: Portfolio 
 keywords: Modern, Blogging, Fun
 author: mgaringoDev
 baseurl: "" # the subpath of your site, e.g. /blog/
